--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -1996,19 +1996,14 @@ input.gui-point-button-right:active {
   -webkit-border-right-bottom-radius: 4px;
   -moz-border-radius-rightbottom: 4px;
   border-right-bottom-radius: 4px;
-  background: rgba(0,0,0,0.25);
   display: inline-block;
   font-size: 15px;
   padding: 15px;
   line-height: 1.3;
   vertical-align: top;
-  margin-top: 12px;
 }
 #ring-page .chart .gui-rect-button {
-  position: absolute;
-  left: 50%;
-  bottom: -64px;
-  margin-left: -68px;
+  margin: 10px auto;
 }
 #ring-page .details {
   -webkit-border-radius: 4px;
@@ -2023,8 +2018,9 @@ input.gui-point-button-right:active {
   font-style: italic;
   background: rgba(0,0,0,0.35);
   padding: 25px;
-  margin: 55px 5px 0;
+  margin: 10px auto 0;
   overflow: visible;
+  text-align: left;
 }
 #ring-page .details h4 {
   font-style: normal;
@@ -2032,23 +2028,12 @@ input.gui-point-button-right:active {
 #ring-page .details .actions-pointer {
   width: 72px;
   height: 13px;
+  position: absolute;
+  left: 50%;
+  top: -21px;
   background: url("/admin/ui/images/pointer.png") center top no-repeat transparent;
   margin-top: 8px;
-}
-#ring-page .details .actions-pointer-left {
-  position: absolute;
-  left: 87px;
-  top: -21px;
-}
-#ring-page .details .actions-pointer-right {
-  position: absolute;
-  left: 676px;
-  top: -21px;
-}
-#ring-page .details .actions-pointer-center {
-  position: absolute;
-  left: 382px;
-  top: -21px;
+  margin-left: -36px;
 }
 #ring-page .partition-section {
   margin-top: 45px;
@@ -2233,6 +2218,53 @@ input.gui-point-button-right:active {
   -ms-animation: pulseGreen 1s infinite;
   -o-animation: pulseGreen 1s infinite;
   animation: pulseGreen 1s infinite;
+}
+@media screen and (max-width: 950px) {
+  #ring-page .chart-wrapper {
+    float: left;
+  }
+  #ring-page .chart-spacer {
+    display: none;
+  }
+  #ring-page .chart {
+    margin: 25px auto 30px;
+    float: none;
+    width: 300px;
+  }
+  #ring-page .partition-wrapper {
+    float: left;
+    margin-left: 40px;
+  }
+  #ring-page #legend,
+  #ring-page #partition-container {
+    width: auto;
+  }
+  #ring-page #legend {
+    border-right: 0;
+    float: left;
+    width: 350px;
+  }
+  #ring-page #partition-container {
+    clear: left;
+    width: 388px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  #ring-page .partition-section {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 800px) {
+  #ring-page .chart-wrapper {
+    float: none;
+  }
+  #ring-page .chart {
+    width: auto;
+    text-align: center;
+  }
+  #ring-page .details {
+    text-align: center;
+  }
 }
 @media screen and (max-width: 620px) {
   #ring-page #legend,
