--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -49,19 +49,14 @@ CSS to be applied ONLY on the ring page
       headline-font()
       singleCorner(left, bottom)
       singleCorner(right, bottom)
-      background     : rgba(0, 0, 0, .25)
       display        : inline-block
       font-size      : 15px
       padding        : 15px
       line-height    : 1.3
       vertical-align : top
-      margin-top     : 12px
 
     .gui-rect-button
-      position    : absolute
-      left        : 50%
-      bottom      : -64px
-      margin-left : -68px
+      margin: 10px auto
 
   .details
     corners()
@@ -72,25 +67,19 @@ CSS to be applied ONLY on the ring page
     font-style  : italic
     background  : rgba(0, 0, 0, .35)
     padding     : 25px
-    margin      : 55px 5px 0
+    margin      : 10px auto 0
     overflow    : visible
+    text-align  : left
 
     h4
       font-style : normal
 
     .actions-pointer
       dimensions(72px, 13px)
-      background : url('/admin/ui/images/pointer.png') center top no-repeat transparent
-      margin-top : 8px
-
-    .actions-pointer-left
-      absoluteLeft(87px, -21px)
-
-    .actions-pointer-right
-      absoluteLeft(676px, -21px)
-
-    .actions-pointer-center
-      absoluteLeft(382px, -21px)
+      absoluteLeft(50%, -21px)
+      background  : url('/admin/ui/images/pointer.png') center top no-repeat transparent
+      margin-top  : 8px
+      margin-left : -36px
 
   .partition-section
     margin-top : 45px
@@ -181,6 +170,50 @@ CSS to be applied ONLY on the ring page
 
       &.pulse
         vendor('animation', pulseGreen 1s infinite)
+
+  @media screen and (max-width: 950px)
+    .chart-wrapper
+      float : left
+
+    .chart-spacer
+      display : none
+
+    .chart
+      margin : 25px auto 30px
+      float  : none
+      width  : 300px
+
+    .partition-wrapper
+      float       : left
+      margin-left : 40px
+
+    #legend, #partition-container
+      width : auto
+
+    #legend
+      border-right : 0
+      float        : left
+      width        : 350px
+
+    #partition-container
+      clear        : left
+      width        : 388px
+      margin-right : 0
+      margin-left  : 0
+
+    .partition-section
+      margin-top : 0
+
+  @media screen and (max-width: 800px)
+    .chart-wrapper
+      float : none
+
+    .chart
+      width      : auto
+      text-align : center
+
+    .details
+      text-align : center
 
   @media screen and (max-width: 620px)
     #legend, #partition-container
@@ -481,217 +514,4 @@ CSS to be applied ONLY on the ring page
   }
 }
 
-/*
-  #no-details
-    text-align : center
-    margin     : 25px auto
 
-  .monospace
-    monospace()
-    font-size : 13px
-    text-overflow : ellipsis
-    overflow : hidden
-
-  #current-area
-    max-width   : 850px
-    margin      : 0 auto 45px auto
-    padding-top : 40px
- 
-    & > span.gui-text-flat
-      line-height : 1.5
-      display     : block
-
-  .field-container
-    width          : 90%
-    vertical-align : middle
-
-    .gui-field
-      margin-right : 0
-
-  .gui-light
-    vertical-align : middle
-    padding        : 14px 0 9px 20px
-
-  .ring-light
-    dimensions(32px, 35px)
-    background     : url('/admin/ui/images/ring-indicator.png') no-repeat transparent
-    vertical-align : middle
-    margin-right   : 5px
-
-    &.green
-      background-position : center top
-
-    &.red
-      background-position : center bottom
-
-  #summary-info
-    margin : 20px 0 0
-
-    h4
-      margin-bottom : 30px
-
-    > div
-      float         : left
-      margin-bottom : 30px
-      padding       : 5px 18px
-      border-right  : 1px solid lightWhite
-
-      &.clear
-        float : none
-        clear : both
-
-    .item-1
-      width : 47%
-      padding-left : 0
-
-    .item-2
-      width : 22%
-      .field-container
-        width : 75%
-    
-    .item-3
-      width         : 22%
-      padding-right : 0
-      border-right  : none
-      .field-container
-        width : 75%
-
-    .clear
-      border-right : none
-      padding      : 0 0 0 0
-
-
-  #details-info
-    
-    label
-      font-weight : normal
-      color       : mediumGray
-      text-shadow : none
-
-    > h4, > div
-      display        : inline-block
-      vertical-align : middle 
-      padding-bottom : 0
-      margin         : 20px 0 30px
-
-    > h4
-      padding-right : 30px
-
-    > div
-      padding-right : 30px
-
-      &.first
-        border-right : 1px solid lightWhite
-
-      &.last
-        margin-left : 15px
-
-
-  #display-container
-    corners()
-    vendor('box-shadow', inset 0 1px 3px darkened)
-    width         : 92%
-    background    : darkened
-    margin-bottom : 15px
-    border-bottom : 1px solid lightWhite
-    padding       : 18px 22px
-    margin-right  : 33px
-    position      : relative
-    max-height    : 372px
-    overflow      : auto
-
-    #nodes, #handoffs
-      ul 
-        margin-bottom : 10px
-
-        li
-          display     : inline-block
-          padding-top : 8px
-
-    #nodes
-      .item-1
-        width : 33%
-      .item-2
-        width : 15%
-    
-    #handoffs
-      .item-1
-        width        : 22%
-        margin-right : 3%
-      .item-2
-        width : 28%
-        span.monospace
-          padding-top : 6px
-      .item-3
-        width : 22%
-      .item-4
-        width : 25%
-
-    .node, .partition
-      margin-bottom : 5px
-
-      .gui-light
-        padding-top  : 10px
-        margin-right : 8px
-
-      div, span
-        display        : inline-block
-        vertical-align : middle
-
-      .orange-arrow
-        dimensions(29px, 26px)
-        background   : url('/admin/ui/images/orange-arrow.png') no-repeat transparent
-        float        : right
-        margin-right : 15px
-
-
-  @media screen and (max-width: 900px)
-    #summary-info
-      .item-1
-        width         : 33%
-        padding-right : 0
-        .field-container
-          width : 75%
-
-    #display-container #handoffs
-      .orange-arrow
-        display : none
-
-      .item-2
-        width : 22%
-        margin-right : 3%;
-        span.monospace
-          width       : 100%
-          padding-top : 0;
-          line-height : 1.2
-
-      .item-3
-        margin-right : 3%
-
-  @media screen and (max-width: 750px)
-    #summary-info
-      .item-2
-        width : 28%
-      .item-3
-        .gui-light
-          display : none
-
-  @media screen and (max-width: 600px)
-    .ring-light
-      display : none
-    #summary-info  
-      .item-1
-        width         : 50%
-        padding-right : 10px
-      .item-2
-        width         : 22%
-        border-right  : none
-        padding-right : 0
-      .item-3
-        display : none
-
-  @media screen and (max-width: 450px)
-    #summary-info
-      .item-2
-        width : 22%
-*/
