--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -3,6 +3,9 @@
   <strong>{{view.normalizedUnavailable}}%</strong>
   of partitions have all primary replicas on down or unreachable nodes.
 </span>
-<a {{action showAllUnavailable href=true}} class="gui-rect-button gui-text-bold">
-  <span class="gui-button-msg">DETAILS</span>
-</a>
+<div>
+  <a {{action showAllUnavailable href=true}} class="gui-rect-button gui-text-bold">
+    <span class="gui-button-msg">DETAILS</span>
+  </a>
+  {{outlet allUnavailOutlet}}
+</div>
