--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -5,8 +5,23 @@
   of nodes.
 </span>
 <div>
-  <a {{action showDegeneratePreflists href=true}} class="gui-rect-button gui-text-bold">
+  <a class="gui-rect-button gui-text-bold">
     <span class="gui-button-msg">DETAILS</span>
   </a>
-  {{outlet degenPrefOutlet}}
+  <section class="details">
+    <div class="actions-pointer actions-pointer-left"></div>
+    <h4 class="gui-headline-bold">
+      Preference lists which do not contain replicas on distinct nodes.
+    </h4>
+    {{#if degeneratesExist}}
+    {{degenerateCount}} partitions have multiple replicas
+    located on the same node.  It is highly recommended that you <a
+    href="http://docs.basho.com/riak/latest/cookbooks/Adding-and-Removing-Nodes/">add
+    nodes</a> to resolve this and ensure the high availability and fault
+  tolerance of your data.
+    {{else}}
+    All partitions have replicas on distinct nodes.  There is nothing to
+    worry about.
+    {{/if}}
+  </section>
 </div>
