--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -5,8 +5,21 @@
   nodes.
 </span>
 <div>
-  <a {{action showQuorumUnavailable href=true}} class="gui-rect-button gui-text-bold">
+  <a class="gui-rect-button gui-text-bold">
     <span class="gui-button-msg">DETAILS</span>
   </a>
-  {{outlet quorumUnavailOutlet}}
+  <section class="details">
+    <div class="actions-pointer actions-pointer-center"></div>
+    <h4 class="gui-headline-bold">
+      Preference lists where a majority of primary repliacs are unavailable.
+    </h4>
+    {{#if quorumUnavailableExist}}
+    {{quorumUnavailableCount}} partitions have a majority
+    of their replicas located on down or unreachable nodes.  It is
+    recommended that you work to restore service to the unreachable nodes.
+    {{else}}
+    No partitions have a majority of their replicas located on down or
+    unreachable nodes. There is nothing to worry about.
+    {{/if}}
+  </section>
 </div>
