--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -70,6 +70,7 @@ CSS to be applied ONLY on the ring page
     margin      : 10px auto 0
     overflow    : visible
     text-align  : left
+    display     : none
 
     h4
       font-style : normal
