--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -4,7 +4,7 @@
   of partitions have all primary replicas on down or unreachable nodes.
 </span>
 <div>
-  <a class="gui-rect-button gui-text-bold">
+  <a class="gui-rect-button gui-text-bold details-button">
     <span class="gui-button-msg">DETAILS</span>
   </a>
   <section class="details">
