--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -5,7 +5,7 @@
   nodes.
 </span>
 <div>
-  <a class="gui-rect-button gui-text-bold">
+  <a class="gui-rect-button gui-text-bold details-button">
     <span class="gui-button-msg">DETAILS</span>
   </a>
   <section class="details">
