--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -86,16 +86,17 @@ CSS to be applied ONLY on the ring page
     margin-top : 45px
 
   #legend
-    dimensions(408px, auto)
-    border-right : 1px solid lightWhite;
-    float  : left
-    margin : 25px 0 25px 0
+    dimensions(385px, auto)
+    border-left  : 1px solid lightWhite;
+    float        : left
+    margin       : 25px 0 25px 0
+    padding-left : 35px
 
     span
       headline-font()
       display   : inline-block
       width     : 80%
-      margin    : 3px 0 15px 0
+      margin    : 3px 0 10px 0
       font-size : 15px
       line-height    : 1.3
       vertical-align : top
@@ -112,12 +113,28 @@ CSS to be applied ONLY on the ring page
       margin-right   : 8px
       vertical-align : top
 
+    #contextual-info
+      margin-bottom : 35px
+
+    .contextual-container
+      border-radius : 4px
+      background    : rgba(0,0,0,0.15)
+      border        : 1px solid rgba(0,0,0,0.6)
+      width         : 345px
+      min-height    : 68px
+      padding       : 15px 15px 10px
+
+      .hover-message
+        copy-font()
+        padding : 10px 0 0 0
+
   #partition-container
     dimensions(388px, auto)
-    overflow : auto
-    margin   : 25px 0 25px 4%
-    float    : left
-    padding-right: 5px;
+    max-height    : 312px
+    overflow      : auto
+    margin        : 25px 4% 25px 0
+    float         : left
+    padding-right : 5px;
 
   .partition
     css-transition(background-color .3s ease, border-color .3s ease)
@@ -174,7 +191,10 @@ CSS to be applied ONLY on the ring page
 
   @media screen and (max-width: 950px)
     .chart-wrapper
-      float : left
+      float         : left
+      border-right  : 1px solid lightWhite
+      padding-right : 40px
+      margin-right  : 0
 
     .chart-spacer
       display : none
@@ -185,19 +205,21 @@ CSS to be applied ONLY on the ring page
       width  : 300px
 
     .partition-wrapper
-      float       : left
-      margin-left : 40px
+      float        : left
+      padding-left : 40px
 
     #legend, #partition-container
       width : auto
 
     #legend
-      border-right : 0
+      border-left  : 0
       float        : left
+      clear        : left
       width        : 350px
+      padding-left : 0
 
     #partition-container
-      clear        : left
+      float        : left
       width        : 388px
       margin-right : 0
       margin-left  : 0
@@ -205,9 +227,22 @@ CSS to be applied ONLY on the ring page
     .partition-section
       margin-top : 0
 
+  @media screen and (max-width: 850px)
+    .chart-wrapper
+      padding-right : 25px
+
+    .partition-wrapper
+      padding-left : 25px
+
   @media screen and (max-width: 800px)
     .chart-wrapper
-      float : none
+      float         : none
+      border-right  : 0
+      padding-right : 0
+
+    .partition-wrapper
+      padding-left : 0
+      width        : auto
 
     .chart
       width      : auto
@@ -216,16 +251,18 @@ CSS to be applied ONLY on the ring page
     .details
       text-align : center
 
+    #contextual-info
+      display : none
+
   @media screen and (max-width: 620px)
+    .partition-wrapper
+      float : none
+
     #legend, #partition-container
       float        : none
       width        : auto
       border-right : none
       margin-left  : 0
-
-    h4.partition-header
-      hSize(26px, 0, 12px)
-      font-weight : normal
 
 /*
  * Keyframes for green pulsing effect.
