--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -169,6 +169,10 @@ CSS to be applied ONLY on the ring page
       dimensions(16px, 16px)
       margin : 2px
 
+    &.pulse
+      dimensions(16px, 16px)
+      margin : 2px
+
     &.gray
       radialGradient(#626262, #555555)
 
