--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -166,6 +166,7 @@ CSS to be applied ONLY on the ring page
     border     : 2px solid rgba(0, 0, 0, .78)
 
     &:hover
+      cursor : pointer
       dimensions(16px, 16px)
       margin : 2px
 
