--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -75,7 +75,7 @@
 
             {{else}}
             <span class="gui-text italic hover-message">
-              Hover over a partition square to view its more information.
+              Click on a partition square to view its more information.
             </span>
             {{/if}}
           </div>
