--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -85,7 +85,7 @@
         <div class="partition red"></div>
         <span class="legend-label gui-text">Only fallbacks available.</span><br/>
         <div class="partition orange"></div>
-        <span class="legend-label gui-text">Majority fallbacks available.</span><br/>
+        <span class="legend-label gui-text">Majority of primary replacs down.</span><br/>
         <div class="partition blue"></div>
         <span class="legend-label gui-text">Replicas do not live on unique nodes.</span><br/>
         <div class="partition green"></div>
