Add doc; general cleanup.

--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -1,6 +1,6 @@
 <div id="degenerate"></div>
 <span class="gui-text-flat italic">
-  <strong>{{view.normalizedDegenerate}}%</strong>
+  <strong>{{view.normalizedAbnormal}}%</strong>
   of partitions have primary replicas that do not live on a unique set
   of nodes.
 </span>
