--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -1,6 +1,6 @@
 <div id="quorum-unavailable"></div>
 <span class="gui-text-flat italic">
-  <strong>{{view.normalizedUnavailable}}%</strong>
+  <strong>{{view.normalizedAbnormal}}%</strong>
   of partitions have a majority of primary replicas down or unreachable
   nodes.
 </span>
