--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -1,6 +1,6 @@
 <div id="all-unavailable"></div>
 <span class="gui-text-flat italic">
-  <strong>{{view.normalizedUnavailable}}%</strong>
+  <strong>{{view.normalizedAbnormal}}%</strong>
   of partitions have all primary replicas on down or unreachable nodes.
 </span>
 <div>
