Add multiple n_val selection.
* Add the ability to select all available n_vals in cluster.
* Add n_val context information.
* Add pure CSS tooltips.
* Provide description and link to the documentation.

--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -63,8 +63,11 @@ CSS to be applied ONLY on the cluster page
 
   .open .actions-container
     css-transition(height .4s ease, margin-bottom .4s ease)
-    height        : 375px
+    height        : 325px
     margin-bottom : 25px
+
+  .open .node.taller .actions-container
+    height : 375px
 
   .gui-light
     vertical-align : middle
