--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -1,5 +1,5 @@
 {{#with view}}
-    <div class="node">
+    <div {{bindAttr class="hostNodeClasses"}}>
         <div class="item1 toggle-container">
             {{#view RiakControl.CurrentClusterToggleView}}
                 <div class="actions-toggle gui-field">
