--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -70,7 +70,7 @@ th
   position      : fixed
   top           : 0
   left          : 0
-  z-index       : 10
+  z-index       : 500
   
 #navbar
   dimensions(auto, 49px)
@@ -205,22 +205,6 @@ footer
 #basho-logo
   display    : block
   background : transparent
-
-#tooltips
-  copy-font()
-  dimensions(100%, auto)
-  position   : fixed
-  bottom     : 0
-  left       : 0
-  border-top : 2px solid #777
-
-#display-tips
-  background  : coverup
-  line-height : 1.5
-  font-style  : italic
-  font-size   : 15px
-  color       : #aaa
-  padding     : 25px 25px 25px
 
 /* Ende IDs & Classes */
 
@@ -492,6 +476,103 @@ input.gui-point-button:active, input.gui-rect-button:active, input.gui-point-but
     background-position : -4px -73px
   
 /* END CODE FOR GENERAL GUI ELEMENTS */
+
+/* CODE FOR PURE CSS TOOLTIPS */
+
+div.tooltip
+  dimensions(25px, 25px)
+  position        : relative    
+  color           : #b2564e
+  text-decoration : none
+  display         : block
+  background      : url('/admin/ui/images/tooltip-mark.png') center center no-repeat transparent
+  text-align      : center
+
+  &.right
+    margin-left : 5px
+
+  a
+    color : riakorange
+
+  a:hover
+    text-decoration : underline
+
+  a.docs:before
+    content : 'Read the docs »'
+
+div.tooltip span
+  display : none
+
+div.tooltip > span
+  dimensions(190px)
+  corners(3px)
+  absoluteLeft(-402%, 30px)
+  css-transition(opacity .8s ease)
+  headline-font()
+  padding     : 20px
+  background  : rgba(85, 85, 85, .95)
+  color       : #ffffff
+  text-align  : left
+  text-shadow : none
+  z-index     : 200
+  font-size   : 15px
+  line-height : 1.3
+
+  .tooltip-heading
+    headline-bold()
+    display       : block
+    margin-bottom : 15px
+
+
+div.tooltip > span:before
+  dimensions(0, 0)
+  absoluteLeft(45.5%, -6px)
+  border-left   : 8px solid transparent
+  border-right  : 8px solid transparent
+  border-bottom : 6px solid rgba(85, 85, 85, .95)
+  z-index       : 205
+  content       : " "
+
+div.tooltip:hover span
+  display : block
+
+div.tooltip:hover > span
+  vendor('animation', fadeOpacity .5s)
+
+@-webkit-keyframes fadeOpacity {
+  0%   {
+    opaque(0)
+  }
+  100% {
+    opaque(1)
+  }
+}
+@-moz-keyframes fadeOpacity {
+  0%   {
+    opaque(0)
+  }
+  100% {
+    opaque(1)
+  }
+}
+@-o-keyframes fadeOpacity {
+  0%   {
+    opaque(0)
+  }
+  100% {
+    opaque(1)
+  }
+}
+@keyframes fadeOpacity {
+  0%   {
+    opaque(0)
+  }
+  100% {
+    opaque(1)
+  }
+}
+
+/* END CODE FOR TOOLTIPS */
 
 .has-cut
   background : url('/admin/ui/images/cut-bg.png') left bottom repeat-x transparent
