--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -98,7 +98,7 @@ th
   a
     opaque(.6)
 
-
+#nav-stats     a { background-position : 200px 243px }
 #nav-snapshot  a { background-position : 15px -343px }
 #nav-cluster   a { background-position : 16px 10px   }
 #nav-ring      a { background-position : 15px -39px  }
