--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -16,6 +16,19 @@
     <div class="chart-wrapper">
       <h2 class="gui-headline">Availability</h2>
 
+      <div class="nval-dropdown-container">
+        <h4 class="gui-headline-bold">See visualizations using a different n_val.</h4>
+        <div class="gui-dropdown-wrapper">
+          <div class="gui-dropdown-bg">
+            <select class="nval-dropdown gui-dropdown">
+              <option> hello </option>
+              <option> goodby</option>
+            </select>
+            <div class="gui-dropdown-cap"></div>
+          </div>
+        </div>
+      </div>
+
       {{view RiakControl.DegeneratePreflistChart}}
       <div class="chart-spacer"></div>
 
