--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -13,6 +13,21 @@ CSS to be applied ONLY on the ring page
   strong
     headline-bold()
 
+  .right
+    float : right
+
+  .gui-dropdown-bg
+    margin-right : 3px
+
+  .gui-dropdown
+    margin-top  : -8px
+    margin-left : -6px
+    position    : absolute
+    z-index     : 200
+
+  .gui-dropdown-cap
+    z-index : 100
+
   #current-ring
     max-width   : 850px
     margin      : 0 auto 45px auto
@@ -24,6 +39,22 @@ CSS to be applied ONLY on the ring page
 
   .clear
     clear : both
+
+  .chart-wrapper
+    position : relative
+    overflow : visible
+
+  .nval-dropdown-container
+    position : absolute
+    right    : 5px
+    top      : 0
+
+    .gui-dropdown-wrapper
+      width : 120px
+      float : right
+
+    h4
+      margin-bottom : 5px
 
   .chart-spacer
     float  : left
