/admin/partitions json is now used to update the n_val dropdown menu

--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -1948,6 +1948,11 @@ input.gui-point-button-right:active {
     width: 15%;
   }
 }
+#ring-page select {
+  float: right;
+  min-width: 100px;
+  outline: none;
+}
 #ring-page h4 {
   margin-bottom: 20px;
 }
