--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -7,6 +7,11 @@ CSS to be applied ONLY on the ring page
 
 #ring-page
 
+  select
+    float     : right
+    min-width : 100px
+    outline   : none
+
   h4
     margin-bottom : 20px
 
