dropdown menu mostly wired up

--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -21,7 +21,7 @@
         {{view Ember.Select
                contentBinding="RiakControl.PossibleNVals.content"
                valueBinding="RiakControl.PossibleNVals.selected"
-               classBinding="RiakControl.PossibleNVals.classes"
+               selectionDidChangeBinding="RiakControl.PossibleNVals.change"
         }}
         <!--
         <div class="gui-dropdown-wrapper">
