--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -254,6 +254,15 @@ CSS to be applied ONLY on the ring page
         vendor('animation', pulseGreen 1s infinite)
 
   @media screen and (max-width: 950px)
+    .nval-dropdown-container
+      position : static
+
+      h4
+        margin-top : 15px
+
+      select
+        float : none
+
     .chart-wrapper
       float         : left
       border-right  : 1px solid lightWhite
