updates now work properly

--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -22,6 +22,7 @@
                contentBinding="content.n_vals"
                valueBinding="content.selected_n_val"
                propsBinding="content"
+               selectionBinding="content.selected_n_val"
         }}
       </div>
 
