options are now using objects instead of strings

--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -23,6 +23,8 @@
                valueBinding="content.selected_n_val"
                propsBinding="content"
                selectionBinding="content.selected_n_val"
+               optionLabelPath="content.name"
+               optionValuePath="content.value"
         }}
       </div>
 
