Formatting; update based on select box.

--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -20,9 +20,9 @@
         <h4 class="gui-headline-bold">See visualizations using a different n_val.</h4>
         {{view RiakControl.NValSelectView
                contentBinding="content.n_vals"
-               valueBinding="content.selected_n_val"
-               propsBinding="content"
-               selectionBinding="content.selected_n_val"
+               valueBinding="content.selected"
+               dataBinding="content"
+               selectionBinding="content.selected"
         }}
       </div>
 
