Handle incompatible record in Riak 1.4.0.
Return badrpc calls with an incompatible message when unable to
determine which versions of nodes are communicating in a mixed-
version cluster.

Switch to macros for record definitions.

Also, suppress information in the UI when detecting this incompatibility
to prevent from the display of NaN values.

--- a/priv/admin/js/templates/current_nodes_item.hbs
+++ b/priv/admin/js/templates/current_nodes_item.hbs
@@ -26,7 +26,7 @@
             <div class="clear"></div>
         </div>
         <div class="item5 gui-text memory-box">
-            {{#if reachable}}
+            {{#if available}}
                 <div class="membar-bg">
                     <div class="mem-colors">
                         <div class="erlang-mem mem-color" {{bindAttr style="memErlangStyle"}} {{bindAttr name="memErlangCeil"}}></div>
