--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -21,7 +21,7 @@
             <div class="clear"></div>
         </div>
         <div class="item4 gui-text memory-box">
-            {{#if reachable}}
+            {{#if available}}
                 <div class="membar-bg">
                     <div class="mem-colors">
                         <div class="erlang-mem mem-color" {{bindAttr style="memErlangStyle"}} {{bindAttr name="memErlangCeil"}}></div>
