Add n_val context information.
* Add pure CSS tooltips.
* Provide description and link to the documentation.

--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -8,9 +8,10 @@ CSS to be applied ONLY on the ring page
 #ring-page
 
   select
-    float     : right
-    min-width : 100px
-    outline   : none
+    float      : right
+    min-width  : 100px
+    outline    : none
+    margin-top : 3px
 
   h4
     margin-bottom : 20px
@@ -107,6 +108,12 @@ CSS to be applied ONLY on the ring page
     overflow    : visible
     text-align  : left
     display     : none
+
+    a
+      color : riakorange
+
+      &:hover
+        text-decoration : underline
 
     h4
       font-style : normal
@@ -253,6 +260,17 @@ CSS to be applied ONLY on the ring page
       &.pulse
         vendor('animation', pulseGreen 1s infinite)
 
+  @media screen and (max-width: 1050px)
+    .nval-dropdown-container
+
+      div.tooltip
+    
+        & > span
+          absoluteLeft(-750%, 30px)
+    
+          &:before
+            absoluteLeft(83%, -6px)
+
   @media screen and (max-width: 950px)
     .nval-dropdown-container
       position : static
@@ -261,7 +279,19 @@ CSS to be applied ONLY on the ring page
         margin-top : 15px
 
       select
-        float : none
+        float      : none
+        margin-top : 0
+
+      div.tooltip
+        float   : none
+        display : inline-block
+        vertical-align : middle
+
+        & > span
+          absoluteLeft(-18%, 30px)
+
+          &:before
+            absoluteLeft(4%, -6px)
 
     .chart-wrapper
       float         : left
