--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -441,23 +441,6 @@ footer .side-line {
   display: block;
   background: transparent;
 }
-#tooltips {
-  font-family: 'noticia', georgia, serif;
-  width: 100%;
-  height: auto;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  border-top: 2px solid #777;
-}
-#display-tips {
-  background: rgba(0,0,0,0.85);
-  line-height: 1.5;
-  font-style: italic;
-  font-size: 15px;
-  color: #aaa;
-  padding: 25px 25px 25px;
-}
 .gui-dropdown-wrapper {
   width: auto;
   height: 30px;
@@ -793,6 +776,120 @@ input.gui-point-button-right:active {
 .gui-light.orange {
   background-position: -4px -73px;
 }
+div.tooltip {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  color: #b2564e;
+  text-decoration: none;
+  display: block;
+  background: url("/admin/ui/images/tooltip-mark.png") center center no-repeat transparent;
+  text-align: center;
+}
+div.tooltip.right {
+  margin-left: 5px;
+}
+div.tooltip a {
+  color: #f99d33;
+}
+div.tooltip a:hover {
+  text-decoration: underline;
+}
+div.tooltip a.docs:before {
+  content: 'Read the docs »';
+}
+div.tooltip span {
+  display: none;
+}
+div.tooltip > span {
+  width: 190px;
+  height: auto;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  position: absolute;
+  left: -402%;
+  top: 30px;
+  -webkit-transition: opacity 0.8s ease;
+  -moz-transition: opacity 0.8s ease;
+  -ms-transition: opacity 0.8s ease;
+  -webkit-transition: opacity 0.8s ease;
+  -moz-transition: opacity 0.8s ease;
+  -o-transition: opacity 0.8s ease;
+  transition: opacity 0.8s ease;
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  padding: 20px;
+  background: rgba(85,85,85,0.95);
+  color: #fff;
+  text-align: left;
+  text-shadow: none;
+  z-index: 200;
+  font-size: 15px;
+  line-height: 1.3;
+}
+div.tooltip > span .tooltip-heading {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 15px;
+}
+div.tooltip > span:before {
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 45.5%;
+  top: -6px;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 6px solid rgba(85,85,85,0.95);
+  z-index: 205;
+  content: " ";
+}
+div.tooltip:hover span {
+  display: block;
+}
+div.tooltip:hover > span {
+  -webkit-animation: fadeOpacity 0.5s;
+  -moz-animation: fadeOpacity 0.5s;
+  -ms-animation: fadeOpacity 0.5s;
+  -o-animation: fadeOpacity 0.5s;
+  animation: fadeOpacity 0.5s;
+}
+@-webkit-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@-moz-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@-o-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
 .has-cut,
 .cut {
   background: url("/admin/ui/images/cut-bg.png") left bottom repeat-x transparent;
@@ -920,6 +1017,61 @@ input.gui-point-button-right:active {
     font-size: 30px;
     letter-spacing: 0;
     padding-bottom: 5px;
+  }
+}
+@-moz-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@-webkit-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@-o-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@-ms-keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+}
+@keyframes fadeOpacity {
+  0% {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  100% {
+    opacity: 1;
+    filter: alpha(opacity=100);
   }
 }
 #snapshot-page #healthy-cluster,
@@ -1952,6 +2104,7 @@ input.gui-point-button-right:active {
   float: right;
   min-width: 100px;
   outline: none;
+  margin-top: 3px;
 }
 #ring-page h4 {
   margin-bottom: 20px;
@@ -2061,6 +2214,12 @@ input.gui-point-button-right:active {
   overflow: visible;
   text-align: left;
   display: none;
+}
+#ring-page .details a {
+  color: #f99d33;
+}
+#ring-page .details a:hover {
+  text-decoration: underline;
 }
 #ring-page .details h4 {
   font-style: normal;
@@ -2306,6 +2465,18 @@ input.gui-point-button-right:active {
   -o-animation: pulseGreen 1s infinite;
   animation: pulseGreen 1s infinite;
 }
+@media screen and (max-width: 1050px) {
+  #ring-page .nval-dropdown-container div.tooltip > span {
+    position: absolute;
+    left: -750%;
+    top: 30px;
+  }
+  #ring-page .nval-dropdown-container div.tooltip > span:before {
+    position: absolute;
+    left: 83%;
+    top: -6px;
+  }
+}
 @media screen and (max-width: 950px) {
   #ring-page .nval-dropdown-container {
     position: static;
@@ -2315,6 +2486,22 @@ input.gui-point-button-right:active {
   }
   #ring-page .nval-dropdown-container select {
     float: none;
+    margin-top: 0;
+  }
+  #ring-page .nval-dropdown-container div.tooltip {
+    float: none;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  #ring-page .nval-dropdown-container div.tooltip > span {
+    position: absolute;
+    left: -18%;
+    top: 30px;
+  }
+  #ring-page .nval-dropdown-container div.tooltip > span:before {
+    position: absolute;
+    left: 4%;
+    top: -6px;
   }
   #ring-page .chart-wrapper {
     float: left;
